# binius-wb-snark

./: .dockerignore  Dockerfile  package-lock.json  package.json  skaffold.yaml  worker.ts  worker_sha2.ts  worker_sha3.ts
app/: page.tsx
backend/: Cargo.toml  README.md
backend/src/: lib.rs  main.rs  sha2.rs  sha3.rs  utils.rs
backend/tests/: web.rs
k8s/: binius-deployment.yaml  binius-keccak-deployment.yaml  certificates.yaml  issuer.yaml
