[package]
name = "binius-keccak"
version = "0.1.0"
authors = ["Bartosz Nowak <bartekn337@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
serde-wasm-bindgen = "0.6.5"
binius_circuits = { git = "https://gitlab.com/IrreducibleOSS/binius.git", rev = "2b8048b5138117e345f535932253207f78ad6a6a" }
binius_core = { git = "https://gitlab.com/IrreducibleOSS/binius.git", rev = "2b8048b5138117e345f535932253207f78ad6a6a" }
binius_field = { git = "https://gitlab.com/IrreducibleOSS/binius.git", rev = "2b8048b5138117e345f535932253207f78ad6a6a" }
binius_hal = { git = "https://gitlab.com/IrreducibleOSS/binius.git", rev = "2b8048b5138117e345f535932253207f78ad6a6a" }
binius_hash = { git = "https://gitlab.com/IrreducibleOSS/binius.git", rev = "2b8048b5138117e345f535932253207f78ad6a6a" }
binius_math = { git = "https://gitlab.com/IrreducibleOSS/binius.git", rev = "2b8048b5138117e345f535932253207f78ad6a6a" }
binius_utils = { git = "https://gitlab.com/IrreducibleOSS/binius.git", rev = "2b8048b5138117e345f535932253207f78ad6a6a" }
bumpalo = { version = "3.16.0", features = ["collections"] }
groestl_crypto = { package = "groestl", version = "0.10.1" }
bytemuck = { version = "1.18.0", features = ["derive", "min_const_generics", "must_cast"] }
getrandom = { version = "0.2.15", features = ["js"] }
serde = "1.0.215"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
