[package]
name = "binius-web-snark"
version = "0.1.0"
authors = ["Bartosz Nowak <bartekn337@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
anyhow = "1.0.81"
binius_circuits = { path = "../../binius/crates/circuits" }
binius_core = { path = "../../binius/crates/core" }
binius_field = { path = "../../binius/crates/field" }
binius_hal = { path = "../../binius/crates/hal" }
binius_hash = { path = "../../binius/crates/hash" }
binius_math = { path = "../../binius/crates/math" }
binius_utils = { path = "../../binius/crates/utils" }
bumpalo = { version = "3.16.0", features = ["collections"] }
bytemuck = { version = "1.18.0", features = ["derive", "min_const_generics", "must_cast"] }
getrandom = { version = "0.2.15", features = ["js"] }
groestl_crypto = { package = "groestl", version = "0.10.1" }
hex = "0.4.3"
serde = "1.0.215"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
